# LLCOntrolDigit

./: CMakeLists.txt
include/: digit_forward_kinematics.h  digit_json_helper.h
src/: digit_forward_kinematics.cpp  digit_json_helper.cpp  main.cpp  main_llcontrol.cpp
